Update and rename 2014-spring-teaching-1.md to 2024-2025-spring.md

--- a/_teaching/2024-2025-spring.md
+++ b/_teaching/2024-2025-spring.md
@@ -1,11 +1,11 @@
 ---
-title: "Teaching experience 1"
+title: "Python"
 collection: teaching
 type: "Undergraduate course"
-permalink: /teaching/2014-spring-teaching-1
-venue: "University 1, Department"
+permalink: /teaching/2024-2025-spring
+venue: "Nanning Normal University, "
 date: 2014-01-01
-location: "City, Country"
+location: "Nanning, China"
 ---
 
 This is a description of a teaching experience. You can use markdown like any other post.
@@ -13,8 +13,3 @@ This is a description of a teaching experience. You can use markdown like any ot
 Heading 1
 ======
 
-Heading 2
-======
-
-Heading 3
-======
